# baram_go2_hk_edition

./: README.md  setup.sh
cyclonedds_ws/src/baram_go2_client_driver/: CMakeLists.txt  README.md  package.xml
cyclonedds_ws/src/baram_go2_client_driver/config/: xbox.yaml
cyclonedds_ws/src/baram_go2_client_driver/include/baram_go2_client_driver/: go2_api.hpp  go2_client_driver.hpp  go2_main_node.hpp  go2_motion_service_api.hpp  go2_robot_state.hpp  go2_robot_state_api.hpp  go2_slam_api.hpp  gui_main_window.hpp  motor_crc.h
cyclonedds_ws/src/baram_go2_client_driver/launch/: baram_go2_client_driver.launch.py  joy.launch.py
cyclonedds_ws/src/baram_go2_client_driver/src/: go2_api.cpp  go2_client_driver.cpp  go2_main_node copy.cpp  go2_main_node.cpp  go2_robot_state.cpp  go2_start_node.cpp  gui_main.cpp  gui_main_window.cpp  motor_crc.cpp
cyclonedds_ws/src/baram_go2_client_driver/ui/: data_browser.ui
cyclonedds_ws/src/baram_go2_interfaces/: CMakeLists.txt  README.md  package.xml
cyclonedds_ws/src/baram_go2_interfaces/srv/: Euler.srv  GetBodyHeight.srv  GetBrightness.srv  GetFootRaiseHeight.srv  GetSpeedLevel.srv  GetSwitchObstaclesAvoidance.srv  GetVolume.srv  SetSwitchObstaclesAvoidance.srv  SetVolume.srv  SpeedLevel.srv  Straight.srv  SwitchGait.srv
