<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baram_go2_client_driver</name>
  <version>1.0.0</version>
  <description>[BARAM] Unitree Go2 Driver on ROS2 Humble</description>
  <maintainer email="gogun0928@naver.com">Kho Geonwoo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>tf2_ros</depend>
  <depend>baram_go2_interfaces</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>std_msgs</depend>
  <depend>qt5-qmake</depend>
  <depend>qtbase5-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
